fix(ui): blue pill bug on iOS (#20)

--- a/src/components/LineSelector/index.scss
+++ b/src/components/LineSelector/index.scss
@@ -1,4 +1,6 @@
 .lineSelector {
+  position: relative;
+
   .back {
     position: absolute;
     width: 33%;
